--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.23.0",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-axios": "^0.17.1",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.8.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
