--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.23.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-axios": "^0.17.1",
